--- a/views/index.html
+++ b/views/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link href="./output.css" rel="stylesheet">
 </head>
+
 <body>
-  <h1>{{.Title}}</h1>
+  <h1 class="text-red-600">{{.Title}}</h1>
 
   <a href="/login">Login</a>
   <a href="/signup">Signup</a>
