--- a/views/login.html
+++ b/views/login.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link href="./output.css" rel="stylesheet">
   </head>
   <body>
-    <h1>{{.Title}}</h1>
+    <h1 class="text-red-600">{{.Title}}</h1>
 
     <form action="/login" method="post">
       <label for="username">Username</label>
