--- a/views/signup.html
+++ b/views/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>    
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
   <style>
     .red {
@@ -17,7 +17,7 @@
     <form id="form">
       <label for="username">Username</label>
       <input type="text" id="username" name="username" />
-      <span class="username-error red" ></span>
+      <span class="username-error red"></span>
       <br />
       <label for="email">Email</label>
       <input type="email" id="email" name="email" />
@@ -41,12 +41,20 @@
   </body>
   <script>
     $(document).ready(function () {
+
+      const clearErrorMessage = () => {
+        $(".username-error").text("");
+        $(".password-error").text("");
+        $(".email-error").text("");
+        $(".phone-error").text("");
+        $(".address-error").text("");
+    };
+
       $("#form").on("submit", function (event) {
         event.preventDefault(); // Ngăn chặn hành động gửi mặc định của biểu mẫu
 
         // Lấy dữ liệu biểu mẫu
         var formData = $(this).serialize();
-        console.log('Hoai dang gui request');
         // Gửi dữ liệu biểu mẫu bằng AJAX
         // $.ajax({
         //   type: "POST",
@@ -73,32 +81,31 @@
         //   },
         //   error: function (xhr, status, error) {
         //     // Xử lý lỗi
-        //     console.log("Hoai gap bug ne");
         //     console.log(error, xhr, status);
         //   },
         // });
         $.ajax({
-    url: '/signup', 
-    method: 'POST', 
-    data: formData,
-})
-.done(function(response) {
-    //window.location.href = "/information";
-    console.log('Success:', response);
-})
-.fail(function(jqXHR, textStatus, errorThrown) {
-    // This function runs if the request fails
-    console.log('Request failed:', textStatus);
-    console.error('Error:', errorThrown);
-    console.log(jqXHR);
-    let responseJSON = jqXHR.responseJSON;
-    $(".username-error").text(responseJSON.NameError);
-    $(".password-error").text(responseJSON.PasswordError);
-    $(".email-error").text(responseJSON.EmailError);
-    $(".phone-error").text(responseJSON.PhoneError);
-    $(".address-error").text(responseJSON.AddressError);
-});
-
+          url: "/signup",
+          method: "POST",
+          data: formData,
+        })
+          .done(function (response) {
+            window.location.href = "/information";
+            console.log("Success:", response);
+          })
+          .fail(function (jqXHR, textStatus, errorThrown) {
+            // This function runs if the request fails
+            console.log("Request failed:", textStatus);
+            console.error("Error:", errorThrown);
+            console.log(jqXHR);
+            clearErrorMessage();
+            let responseJSON = jqXHR.responseJSON;
+            $(".username-error").text(responseJSON.NameError);
+            $(".password-error").text(responseJSON.PasswordError);
+            $(".email-error").text(responseJSON.EmailError);
+            $(".phone-error").text(responseJSON.PhoneError);
+            $(".address-error").text(responseJSON.AddressError);
+          });
       });
     });
   </script>
