--- a/views/signup.html
+++ b/views/signup.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  </head>
+    <link href="../styles/output.css" rel="stylesheet">
   <style>
     .red {
       color: red;
@@ -16,7 +16,7 @@
 
     <form id="form">
       <label for="username">Username</label>
-      <input type="text" id="username" name="username" />
+      <input type="text" id="username" name="username"/>
       <span class="username-error red"></span>
       <br />
       <label for="email">Email</label>
