--- a/views/partials/footer.html
+++ b/views/partials/footer.html
@@ -4,19 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="../styles/output.css" rel="stylesheet" />
+    <link href="../../styles/output.css" rel="stylesheet" />
+
   </head>
-
   <body>
-    {{template "partials/header" .}}
-    <h1 class="text-red-600">{{.Title}}</h1>
-
-    <a href="/login">Login</a>
-    <a href="/signup">Signup</a>
-
-    <!-- {{template "partials/footer" .}} -->
     <div class="bg-[#f3e7cd]">
-      <div class="flex justify-center py-14 text-base max-w-[1300px] m-auto">
+      <div
+        class="flex justify-center py-14 text-base max-w-[1300px] m-auto"
+      >
         <div class="max-w-[33%] px-4">
           <div>
             <!-- <img
@@ -30,7 +25,9 @@
             </p>
           </div>
           <div>
-            <p class="text-red-500 text-lg font-bold uppercase mb-2.5">
+            <p
+              class="text-red-500 text-lg font-bold uppercase mb-2.5"
+            >
               Hình thức thanh toán
             </p>
             <!-- <div class="flex gap-2">
@@ -42,20 +39,22 @@
         </div>
         <div class="px-4 max-w-[16%]">
           <div>
-            <p class="text-red-500 text-lg font-bold uppercase mb-5">
+            <p
+              class="text-red-500 text-lg font-bold uppercase mb-5"
+            >
               Chính sách
             </p>
 
             <a href="" target="_blank">
               <p class="mb-1 hover:text-[#e4a53d]">Chính sách thành viên</p>
-            </a>
+            </a> 
             <a href="" target="_blank">
               <p class="mb-1 hover:text-[#e4a53d]">Chính sách thanh toán</p>
             </a>
-            <a href="" target="_blank">
+             <a href="" target="_blank">
               <p class="mb-1 hover:text-[#e4a53d]">Quà tặng tri ân</p>
             </a>
-            <a href="" target="_blank">
+             <a href="" target="_blank">
               <p class="mb-1 hover:text-[#e4a53d]">Bảo mật thông tin cá nhân</p>
             </a>
           </div>
@@ -65,18 +64,18 @@
             <p class="text-red-500 text-lg font-bold uppercase mb-5">
               Thông tin chung
             </p>
-            <p class="mb-1">
-              <span class="text-red-500 font-bold">Địa chỉ</span>{" "} 70 Lữ
-              Gia, Phường 15, Quận 11, TP.HCM
-            </p>
-            <p class="mb-1">
-              <span class="text-red-500 font-bold">Điện thoại:</span>{" "} 1900
-              6750
-            </p>
-            <p class="mb-1 cursor-pointer hover:text-[#e4a53d]">
-              <span class="text-red-500 font-bold">Email:</span>{" "}
-              support@example.com
-            </p>
+              <p class="mb-1">
+                <span class="text-red-500 font-bold">Địa chỉ</span>{" "}
+                70 Lữ Gia, Phường 15, Quận 11, TP.HCM
+              </p>
+              <p class="mb-1">
+                <span class="text-red-500 font-bold">Điện thoại:</span>{" "}
+                1900 6750
+              </p>
+              <p class="mb-1 cursor-pointer hover:text-[#e4a53d]">
+                <span class="text-red-500 font-bold">Email:</span>{" "}
+                support@example.com
+              </p>
           </div>
           <!-- <Connection /> -->
         </div>
