--- a/views/index.html
+++ b/views/index.html
@@ -3,88 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>{{.Title}}</title>
     <title>Document</title>
-    <link href="../styles/output.css" rel="stylesheet" />
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
   </head>
-
   <body>
-    {{template "partials/header" .}}
-    <h1 class="text-red-600">{{.Title}}</h1>
+    {{ template "layouts/header" .}}
 
-    <a href="/login">Login</a>
+    <h1 class="">{{.Title}}</h1>
+
+    <a class="text-blue-600" href="/login">Login</a>
     <a href="/signup">Signup</a>
 
-    <!-- {{template "partials/footer" .}} -->
-    <div class="bg-[#f3e7cd]">
-      <div class="flex justify-center py-14 text-base max-w-[1300px] m-auto">
-        <div class="max-w-[33%] px-4">
-          <div>
-            <!-- <img
-              src="favicon.ico"
-              alt="logo"
-              class="mb-2.5 cursor-pointer"
-            /> -->
-            <p class="text-sm mb-2.5">
-              Hãy đến với Doly Bakery và hãy để những món bánh tuyệt vời của
-              chúng tôi làm cho cuộc sống bạn thêm ngọt ngào
-            </p>
-          </div>
-          <div>
-            <p class="text-red-500 text-lg font-bold uppercase mb-2.5">
-              Hình thức thanh toán
-            </p>
-            <!-- <div class="flex gap-2">
-              {PAYMENT.map((value) => (
-              <img src="{value.img}" alt="{value.alt}" class="w-12 h-7" />
-              ))}
-            </div> -->
-          </div>
-        </div>
-        <div class="px-4 max-w-[16%]">
-          <div>
-            <p class="text-red-500 text-lg font-bold uppercase mb-5">
-              Chính sách
-            </p>
-
-            <a href="" target="_blank">
-              <p class="mb-1 hover:text-[#e4a53d]">Chính sách thành viên</p>
-            </a>
-            <a href="" target="_blank">
-              <p class="mb-1 hover:text-[#e4a53d]">Chính sách thanh toán</p>
-            </a>
-            <a href="" target="_blank">
-              <p class="mb-1 hover:text-[#e4a53d]">Quà tặng tri ân</p>
-            </a>
-            <a href="" target="_blank">
-              <p class="mb-1 hover:text-[#e4a53d]">Bảo mật thông tin cá nhân</p>
-            </a>
-          </div>
-        </div>
-        <div class="px-4 max-w-[25%]">
-          <div>
-            <p class="text-red-500 text-lg font-bold uppercase mb-5">
-              Thông tin chung
-            </p>
-            <p class="mb-1">
-              <span class="text-red-500 font-bold">Địa chỉ</span>{" "} 70 Lữ
-              Gia, Phường 15, Quận 11, TP.HCM
-            </p>
-            <p class="mb-1">
-              <span class="text-red-500 font-bold">Điện thoại:</span>{" "} 1900
-              6750
-            </p>
-            <p class="mb-1 cursor-pointer hover:text-[#e4a53d]">
-              <span class="text-red-500 font-bold">Email:</span>{" "}
-              support@example.com
-            </p>
-          </div>
-          <!-- <Connection /> -->
-        </div>
-        <!-- <div class="px-4 max-w-[25%]">
-          <Support />
-          <Social />
-        </div> -->
-      </div>
-    </div>
+    {{ template "layouts/footer" .}}
   </body>
+  <!-- Bootstrap JS and dependencies -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </html>
