--- a/views/layouts/header.html
+++ b/views/layouts/header.html
@@ -1,27 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{.Title}}</title>
-    <title>Document</title>
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-  </head>
-  <style>
-   :root{--bg-primary: #333;} 
-  </style>
-  <body>
 <!-- welcome -->
-<div class="welcome bg-var(--bg-primary)">
-  <div class="welcome-container ">
+<div class="welcome">
+  <div class="welcome-container">
     <p class="welcome-left">Chào mừng bạn đến với nhà sách Tiến Thọ</p>
     <div class="welcome-log">
-      <a class="bg-red" href="../signup.html"> Đăng ký </a>
-      | <a href="../login.html">Đăng nhập</a>
+      <a class="bg-red" href="/signup"> Đăng ký </a>
+      | <a href="/login">Đăng nhập</a>
     </div>
   </div>
 </div>
@@ -107,9 +90,3 @@
     </li>
   </div>
 </div>
-</body>
-<!-- Bootstrap JS and dependencies -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</html>
