--- a/public/scss/login.css
+++ b/public/scss/login.css
@@ -12,6 +12,9 @@ html {
 a {
   text-decoration: none;
 }
+a:hover {
+  text-decoration: none;
+}
 
 li {
   list-style: none;
@@ -51,6 +54,7 @@ li {
 .header-container {
   padding: 0px 15px;
   max-width: 1200px;
+  width: 1200px;
   height: 113px;
   margin: auto;
   padding-top: 15px;
@@ -263,7 +267,6 @@ li {
 }
 
 .login-container {
-  max-width: 1200px;
   display: flex;
   justify-content: center;
 }
@@ -271,6 +274,49 @@ li {
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+.login-container .login-content .text-info {
+  text-align: center;
+  color: #CE0021 !important;
+}
+.login-container .login-content form {
+  background-color: #ffffff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+}
+.login-container .login-content label {
+  margin-bottom: 8px;
+  font-weight: bold;
+}
+.login-container .login-content input[type=text],
+.login-container .login-content input[type=password] {
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 14px;
+  outline: none;
+}
+.login-container .login-content input[type=text]:focus,
+.login-container .login-content input[type=password]:focus {
+  border-color: #007bff;
+  box-shadow: 0 0 4px rgba(0, 123, 255, 0.5);
+}
+.login-container .login-content button {
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  background-color: #CE0021;
+  color: #ffffff;
+  font-size: 16px;
+  cursor: pointer;
+}
+.login-container .login-content button:hover {
+  opacity: 0.8;
 }
 
 .main-footer {
