--- a/public/scss/signup.scss
+++ b/public/scss/signup.scss
@@ -38,6 +38,7 @@
   // background-color: $color-white;
   padding: 0px 15px;
   max-width: 1200px;
+  width: 1200px;
   height: 113px;
   margin: auto;
   padding-top: 15px;
@@ -258,15 +259,80 @@
 }
 
 .signup-container {
-  max-width: 1200px;
   display: flex;
   justify-content: center;
+  
   .signup-content {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    
+    h1 {
+      text-align: center;
+      color: #CE0021;
+    }
+    
+    form {
+      background-color: #ffffff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      width: 500px;
+      display: flex;
+      flex-direction: column;
+      
+      label {
+        margin-bottom: 8px;
+        font-weight: bold;
+      }
+      
+      input[type="text"],
+      input[type="email"],
+      input[type="address"],
+      input[type="phone"],
+      input[type="password"] {
+        padding: 10px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        font-size: 14px;
+        outline: none;
+        
+        &:focus {
+          border-color: #007bff;
+          box-shadow: 0 0 4px rgba(0, 123, 255, 0.5);
+        }
+      }
+      
+      .red {
+        color: #ce0021;
+        font-size: 21px;
+      }
+      
+      button {
+        padding: 10px;
+        border: none;
+        border-radius: 4px;
+        background-color: #CE0021;
+        color: #ffffff;
+        font-size: 16px;
+        cursor: pointer;
+        
+        &:hover {
+          opacity: 0.8;
+        }
+      }
+    }
+    
+    a {
+      text-align: right;
+      margin-top: 10px;
+      color: #ce0021;
+      text-decoration: underline;
+      display: block;
+    }
   }
 }
+
 
 // footer
 .main-footer {
