--- a/views/index.html
+++ b/views/index.html
@@ -1,32 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{.Title}}</title>
-    <title>Document</title>
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="scss/index.css">
-    <link rel="stylesheet" href="scss/styles.css">
-  </head>
-  <body>
-    {{ template "layouts/header" .}}
+<div class="homepage-container">
+  <div class="homepage-content">
+    <h1 class="">{{.Title}}</h1>
+  </div>
+</div>
 
-    <Sdiv class="homepage-container">
-      <div class="homepage-content">
-
-        <h1 class="">{{.Title}}</h1>
-      </div>
-    </Sdiv>
-
-    {{ template "layouts/footer" .}}
-  </body>
-  <!-- Bootstrap JS and dependencies -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</html>
