--- a/views/layouts/footer.html
+++ b/views/layouts/footer.html
@@ -1,4 +1,4 @@
-<div class="main-footer">
+<div class="main-footer" style="border: 1px solid #ccc;margin-top: 20px;">
   <div class="footer">
     <div class="footer-header">
       <div class="footer-heading">
