--- a/views/login.html
+++ b/views/login.html
@@ -1,40 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="scss/login.css" />
-  </head>
-  <body>
-    {{ template "layouts/header" .}}
+<div class="login-container">
+  <div class="login-content">
+    <h1 class="text-info">{{.Title}}</h1>
 
-    <div class="login-container">
-      <div class="login-content">
-        <h1 class="text-info">{{.Title}}</h1>
-
-        <form action="/login" method="post">
-          <label for="username">Username</label>
-          <input type="text" id="username" name="username" required />
-          <br />
-          <label for="password">Password</label>
-          <input type="password" id="password" name="password" required />
-          <br />
-          <button type="submit">Login</button>
-        </form>
-
-        <a href="/signup">Signup</a>
-      </div>
-    </div>
-    {{ template "layouts/footer" .}}
-  </body>
-  <!-- Bootstrap JS and dependencies -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</html>
+    <form action="/login" method="post">
+      <label for="username">Tên đăng nhập</label>
+      <input type="text" id="username" name="username" required />
+      <br />
+      <label for="password">Mật khẩu</label>
+      <input type="password" id="password" name="password" required />
+      <br />
+      <button type="submit">Đăng nhập</button>
+      <a
+        style="
+          text-align: right;
+          margin-top: 10px;
+          color: #ce0021;
+          text-decoration: underline;
+        "
+        href="/signup"
+        >Đăng ký</a
+      >
+    </form>
+  </div>
+</div>
