--- a/public/scss/information.scss
+++ b/public/scss/information.scss
@@ -258,21 +258,69 @@
 }
 
 .information-container {
-  max-width: 1200px;
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
+  height: 100vh;
+
   .information-content {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    width: 900px;
+
+    h1 {
+      text-align: center;
+      color: #CE0021;
+      margin-bottom: 20px;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+
+      td {
+        padding: 8px;
+        border-bottom: 1px solid #ccc;
+
+        &:first-child {
+          font-weight: bold;
+          color: #333;
+        }
+
+        p {
+          margin: 0;
+          font-size: 14px;
+        }
+      }
+    }
   }
+
   .action {
+    margin-top: 20px;
     display: flex;
+    justify-content: space-between;
+    width: 500px;
+
     a {
-      padding: 5px 10px;
+      color: #ffffff;
+      background-color: #CE0021;
+      padding: 10px;
+      border-radius: 4px;
+      text-align: center;
+      text-decoration: none;
+      font-size: 14px;
+      width: 48%;
+      
+      &:hover {
+        opacity: 0.8;
+      }
     }
   }
 }
+
 
 // footer
 .main-footer {
