--- a/public/scss/signup.css
+++ b/public/scss/signup.css
@@ -311,6 +311,9 @@ li {
   border-color: #007bff;
   box-shadow: 0 0 4px rgba(0, 123, 255, 0.5);
 }
+.signup-container .signup-content form .permission {
+  display: flex;
+}
 .signup-container .signup-content form .red {
   color: #ce0021;
   font-size: 21px;
